style: fix wangeditor hover contrast

--- a/src/components/MarkdownEditor/index.scss
+++ b/src/components/MarkdownEditor/index.scss
@@ -9,8 +9,8 @@
   --w-e-textarea-handler-bg-color: var(--h_color_primary);
   --w-e-toolbar-color: var(--h_window_text_secondary);
   --w-e-toolbar-bg-color: transparent;
-  --w-e-toolbar-active-color: var(--h_color_primary);
-  --w-e-toolbar-active-bg-color: var(--h_window_surface);
+  --w-e-toolbar-active-color: var(--h_window_text);
+  --w-e-toolbar-active-bg-color: color-mix(in srgb, var(--h_color_primary) 12%, var(--h_window_surface_deep));
   --w-e-toolbar-disabled-color: var(--h_window_text_muted);
   --w-e-toolbar-border-color: var(--h_window_border);
   --w-e-modal-button-bg-color: var(--h_color_primary);
